# FeatherPen

./: .env.example  .gitattributes  .gitignore  .traerules  LICENSE  PROJECT_RULES.md  __init__.py  app.ini  config.yaml  init_env.py  main.py  member_config.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat
assets/lib/: core.py
assets/lib/lang/: zh_CN.py
config/: __init__.py  config_loader.py
core/: llm_api.py  novel_auto_gen.py
database/: db_sqlite.py
docs/: ACCOUNT_SPEC.md  API.md  COMPATIBILITY.md  CONFIG_AND_API_SPEC.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  DEVELOP.md  PROJECT_OVERVIEW.md  README.md  STRUCTURE.md  YESAPI_ACCOUNT.md  Yggdrasil.txt
docs/dev/: API_Spec.md  Build_Guide.md  Code_Style.md  Float_Widget_Spec.md  Project_Structure.md  Test_Guide.md  UI_Compatibility_Spec.md  接口清单文档.txt
docs/user/: Data_Import_Export.md  FAQ.md  Install_Guide.md  Language_Spec.md
lib/lang/: __init__.py  en_US.py
src/: __init__.py
src/account/: __init__.py  account_login.py  account_service.py  member_ctrl.py  point_system.py
src/account/config/: __init__.py  config_loader.py  i18n.py
src/config/: config_loader.py
src/core/: __init__.py  generate_engine.py  llm_api.py  memory_filter.py  novel_auto_gen.py  progress_monitor.py  role_extract.py  world_check.py
src/database/: __init__.py  account_repo.py  db_sqlite.py  monitor_db.py
src/utils/: __init__.py  logger.py
src/utils/monitor/: __init__.py  hardware_collect.py  log_writer.py
tests/: __init__.py  test_account_service.py
ui/: app.py  float_widget.py  login_page.py  login_ui.py  main_window.py  member_panel.py  mini_monitor_window.py  model_setting_ui.py  monitor_dashboard.py  novel_workbench.py
ui/styles/: main.qss
web/: index.html
