# FeatherPen V1.0.0 Python项目标准化构建配置
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FeatherPen"
version = "1.0.0"
authors = [{ name = "Kendrck" }]
description = "本地离线优先跨平台AI长篇小说生成工具"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=24.0.0",
  "flake8>=6.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FeatherPen"
version = "1.0.0"
author = "Kendrck"
description = "FeatherPen 羽笔 V1.0.0 国标AI长篇小说创作工具"
long_description = "基于GB/T 8567国标规范开发的五级世界树架构AI长篇创作工具，支持亿级字数稳定生成、剧情校正、分层记忆、权限特权体系"
long_description_content_type = "text/markdown"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools"
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src", "ui"]
exclude = ["tests*", "runtime*"]

[tool.black]
line-length = 120
target-version = ["py310"]
exclude = ""

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = ["runtime", "dist", "tests"]